new-staging/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shark
spec:
  replicas: 5
  selector:
    matchLabels:
      app: shark
  strategy:
    canary: null
    blueGreen:
      autoPromotionEnabled: true
      autoPromotionSeconds: 30
      activeService: shark
      previewService: shark-preview
