new-staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shark
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 8080
