new-staging/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-http-https
spec:
  hostnames:
  - shark.ashwingowda.com
  parentRefs:
  - kind: Gateway
    name: new-staging-gtw
    sectionName: https
  rules:
  - backendRefs:
    - name: new-staging-shark
      namespace: new-staging
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
