new-staging/new-staging-shark-preview-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-preview-http-https
  namespace: new-staging
spec:
  parentRefs:
    # - name: staging-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: new-staging-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - shark-preview.ashwingowda.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shark-preview
          namespace: new-staging
          port: 80
